# testing_programs

./: README.md
ble_server/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
button_test_std/: Cargo.toml
button_test_std/src/: main.rs
fall_detection/: Cargo.toml  README.md
fall_detection/src/: main.rs
led_blink/src/: main.rs
light_sleep_test/: Cargo.toml  README.md
light_sleep_test/src/: main.rs
ratatui/: ratatui.md
ratatui/ascii_logo/: Cargo.toml  README.md
ratatui/ascii_logo/src/: main.rs
ratatui/chart_std/: Cargo.toml  README.md
ratatui/chart_std/src/: main.rs
ratatui/hello_ratatui/: Cargo.toml  README.md
ratatui/hello_ratatui/src/: main.rs
sensors/: README.md
sensors/max30102_std/: Cargo.toml  README.md
sensors/max30102_std/src/: main.rs
sensors/max30102_without_hayasen/: Cargo.toml
sensors/max30102_without_hayasen/src/: main.rs
telegram/: Cargo.toml
telegram/src/: main.rs
wifi_std/: Cargo.toml  README.md
wifi_std/src/: main.rs
