[package]
name = "max30102_std"
version = "0.1.0"
authors = ["Vaishnav-Sabari-Girish <forgamesonly684@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "max30102_std"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
hayasen = { version = "0.1.0", features = ["max30102"] }
anyhow = "1.0.100"

[build-dependencies]
embuild = "0.33"
